# gota

./: CHALLENGE.md  DESIGN.md  README.md
doc/diagrams/: README.md
doc/diagrams/sequence-flow/: request-response.plantuml
doc/diagrams/system-architecture/: high-level-architecure-diagram.py
gota-cdk/: .gitignore  .sam-local.env.json  README.md  cdk.json  package.json
gota-cdk/lib/: gota-cdk-stack.ts
gota-cdk/test/: gota-cdk.test.ts
gota-core/: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  requirements.txt  setup.cfg  setup.py
gota-core-client/: README.md
gota-core-client/.openapi-generator/: FILES
gota-core-client/docs/: DefaultApi.md  Ingredient.md  IngredientQuantity.md  IngredientQuantityUnit.md  Recipe.md  RecipeDificulty.md  RecipeDuration.md  RecipeIngredient.md  RecipeInstruction.md  RecipeServes.md  RecipeTool.md
gota-core-client/openapi_client/: api_client.py  model_utils.py
gota-core-client/openapi_client/api/: default_api.py
gota-core-client/openapi_client/model/: ingredient.py  recipe.py  (+8 more)
gota-core-client/test/: test_default_api.py  test_ingredient.py  test_ingredient_quantity.py  test_ingredient_quantity_unit.py  test_location_inner.py  test_recipe.py  test_recipe_dificulty.py  test_recipe_duration.py  test_recipe_ingredient.py  test_recipe_instruction.py  test_recipe_serves.py  test_recipe_tool.py  test_validation_error.py
gota-core/docker/dynamodb/: shared-local-instance.db
gota-core/src/gota/core/: api.py  app.py  enums.py  errors.py  models.py  repository.py  time_converter.py
gota-core/src/gota/core/storage/: dynamodb.py  istorage.py  memory.py  types.py
gota-core/tests-integration/: conftest.py  fixtures.py  test_api.py
gota-core/tests/gota/core/: test_api.py  test_app.py  test_models.py  test_repository.py  test_time_converter.py
gota-core/tests/gota/core/storage/: test_dynamodb.py  test_memory.py
(+1 files in other folders)
